<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:title="@string/gestion_profil"
        android:titleTextColor="#FFFFFF" />
    <TextView
        android:id="@+id/text_view_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestion_profil"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:id="@+id/linear_layout_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/text_view_profile_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_complet" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/courriel"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mettre_a_jour_profil"
            android:backgroundTint="#FF5722"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/button_sign_out"
            android:backgroundTint="#FF5722"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deconnexion"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_gotobdd"
            android:backgroundTint="#FF5722"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_base_donnees"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
