<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_add_perso_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPerso"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_add_perso_title"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomPerso" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_full_name"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:layout_below="@id/text_input_layout_description"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/seek_bar_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_level"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progressTint="#FF5722" />

    <TextView
        android:id="@+id/text_view_health_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_points"
        android:layout_below="@id/seek_bar_level"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/seek_bar_health_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_health_points"
        android:layout_marginTop="8dp"
        android:progressTint="#FF5722"
        android:max="150"
        android:min="50"/>

    <Button
        android:id="@+id/button_add_perso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="@string/addPerso"
        android:layout_below="@id/text_view_health_points"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>
</RelativeLayout>
